welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     while(!estSurBiscuit()){
      while (!isFacingTrail()){
      	gauche();
    	}
      avance();
  	baisseBrosse();
    leveBrosse();
    }
  	prendBiscuit();
 }

 // here comes your isFacingTrail method